[vcs] Fix collecting of a list
Fixes zero-tolerance inspection

GitOrigin-RevId: ea97883de7e793b652044358ad53c37572bd8925